--- a/index.html
+++ b/index.html
@@ -3,18 +3,58 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Bora Codar #08 - Dashboard</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
-    <main id="app">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+    <main id="app" class="grid">
+        <div class="box nps grid">
+            <div class="top">NPS geral</div>
+            <div class="middle grid">
+                <img src="./img/smile.svg" alt="boinha verde sorrindo" />
+                Excelente
+            </div>
+            <div class="bottom">
+                <span>NPS Score</span>
+                <span>75</span>
+            </div>
+        </div>
+        <div class="box sell grid">
+            <div class="top">Vendas Fechadas</div>
+            <div class="middle grid">
+
+            </div>
+            <div class="bottom">
+                <div class="item">
+                    <span>Esperado</span>
+                    <span>100</span>
+                </div>
+                <div class="item">
+                    <span>Alcançado</span>
+                    <span>70</span>
+                </div>
+            </div>
+        </div>
+        <div class="box target grid">
+            <div class="top">Meta mensal</div>
+            <div class="middle grid">
+
+            </div>
+            <div class="bottom">
+                <div class="item">
+                    <span>Esperado</span>
+                    <span>R$ 70k</span>
+                </div>
+                <div class="item">
+                    <span>Alcançado</span>
+                    <span>R$ 63k</span>
+                </div>
+            </div>
+        </div>
+        <!--<div class="box"></div>-->
     </main>
 </body>
 </html>
