cores por variaveis

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <span>100</span>
                 </div>
                 <div class="item">
-                    <span>Alcançado</span>
+                    <span style="--bg-color: linear-gradient(121.94deg, #CE9FFC 15.98%, #7367F0 82.85%);">Alcançado</span>
                     <span>70</span>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <span>R$ 70k</span>
                 </div>
                 <div class="item">
-                    <span>Alcançado</span>
+                    <span style="--bg-color: linear-gradient(121.94deg, #DF9780 15.98%, #A66DE9 82.85%);">Alcançado</span>
                     <span>R$ 63k</span>
                 </div>
             </div>
