--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
                             cx="50%"
                             cy="50%"
                             r="98.5"
-                            stroke=url(#paint0_linear_201_104)
+                            stroke=url(#paint0_linear_201_85)
                     />
                     <defs>
                         <linearGradient
-                                id="paint0_linear_201_104"
-                                x1="0.5"
+                                id="paint0_linear_201_85"
+                                x1="-9"
                                 y1="82"
-                                x2="154.842"
-                                y2="178.702"
+                                x2="145"
+                                y2="178"
                                 gradientUnits="userSpaceOnUse"
                         >
-                            <stop stop-color="#DF9780" />
-                            <stop offset="1" stop-color="#A66DE9" />
+                            <stop stop-color="#CE9FFC" />
+                            <stop offset="1" stop-color="#7367F0" />
                         </linearGradient>
                     </defs>
                 </svg>
@@ -68,7 +68,34 @@
         <div class="box target grid">
             <div class="top">Meta mensal</div>
             <div class="middle grid">
-
+                <svg viewBox="0 0 232 232" style="--percentage: 90">
+                    <circle
+                            cx="50%"
+                            cy="50%"
+                            r="98.5"
+                            opacity="0.1"
+                            stroke="#D9D9D9"
+                    />
+                    <circle
+                            cx="50%"
+                            cy="50%"
+                            r="98.5"
+                            stroke=url(#paint0_linear_201_104)
+                    />
+                    <defs>
+                        <linearGradient
+                                id="paint0_linear_201_104"
+                                x1="0.5"
+                                y1="82"
+                                x2="154.842"
+                                y2="178.702"
+                                gradientUnits="userSpaceOnUse"
+                        >
+                            <stop stop-color="#DF9780" />
+                            <stop offset="1" stop-color="#A66DE9" />
+                        </linearGradient>
+                    </defs>
+                </svg>
             </div>
             <div class="bottom">
                 <div class="item">
