--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                         </linearGradient>
                     </defs>
                 </svg>
+                <div class="content">
+                    <h3>70%</h3>
+                    <p>alcançada</p>
+                </div>
             </div>
             <div class="bottom">
                 <div class="item">
@@ -96,6 +100,10 @@
                         </linearGradient>
                     </defs>
                 </svg>
+                <div class="content">
+                    <h3>90%</h3>
+                    <p>alcançada</p>
+                </div>
             </div>
             <div class="bottom">
                 <div class="item">
@@ -108,7 +116,7 @@
                 </div>
             </div>
         </div>
-        <!--<div class="box"></div>-->
+        <div class="box"></div>
     </main>
 </body>
 </html>
