primeira parte da parte debaixo ta pronta

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main id="app" class="grid">
         <div class="box nps grid">
-            <div class="top">NPS geral</div>
+            <div class="top text-center">NPS geral</div>
             <div class="middle grid">
                 <img src="./img/smile.svg" alt="boinha verde sorrindo" />
                 Excelente
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="box sell grid">
-            <div class="top">Vendas Fechadas</div>
+            <div class="top text-center">Vendas Fechadas</div>
             <div class="middle grid">
                 <svg viewBox="0 0 232 232" style="--percentage: 70">
                     <circle
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="box target grid">
-            <div class="top">Meta mensal</div>
+            <div class="top text-center">Meta mensal</div>
             <div class="middle grid">
                 <svg viewBox="0 0 232 232" style="--percentage: 90">
                     <circle
@@ -116,7 +116,26 @@
                 </div>
             </div>
         </div>
-        <div class="box"></div>
+        <div class="box weekly-sell grid">
+            <div class="top">
+                Vendas por dia da semana
+            </div>
+            <div class="wrapper">
+                <div class="left grid">
+                    <div class="most-sell grid">
+                        <span>Dias com mais vendas</span>
+                        quarta-feira
+                    </div>
+                    <div class="less-sell grid">
+                        <span>Dias com menos vendas</span>
+                        domingo
+                    </div>
+                </div>
+                <div class="right">
+
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
